fix(sonar): address code smells and quality issues